# tesseract_box_merge

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
src/: Makefile.am  Makefile.in  box-merge.c  box-merge.h  box-parse.c  box-parse.h  char-tree.c  char-tree.h  common.c  common.h  embedded-ucd.c  embedded-ucd.h  ligature-extract.c  ligature-extract.h  ligature-list.c  ligature-list.h  ligature-tree.c  main-extract-ligatures.c  main-merge-boxes.c  main.c  out.box  stack.c  stack.h  ucd-parse.c  ucd-parse.h  unicode-utils.c  unicode-utils.h
test/: Makefile  Makefile.am  Makefile.am~  Makefile.in  strtok_l.c  strtok_l.c~
